--- a/views/index.html
+++ b/views/index.html
@@ -13,10 +13,15 @@
   <body onload="load_tab('homepage')">
       <!--HEADER-->
       <nav class="navbar navbar-expand-lg navbar bg static-top">
-          <a class="navbar-brand" href="index" id="homepage">
-              <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left;">
-          </a>
-          <h2 style="text-align: right;">Welcome, User!</h2>
+          <div class="col-sm">
+                <a class="navbar-brand" href="index" id="homepage">
+                        <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left;">
+                </a>
+            </div>
+          
+          <div class="col-sm">
+            <h2 style="text-align: right;">Welcome, User!</h2>
+          </div>
           <button type="button" class="btn btn-primary" onclick=logout() style="
                     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                     padding: 14px 20px;
@@ -35,27 +40,27 @@
                 <div class="col-sm-2 col-md-1 dropdown" style="padding-right: 0; padding-left: 0">
                     <ul class="dropdown-menu flex-column">
                         <!--TODO: Add appropriate Home link-->
-                        <button onclick="load_tab('homepage')" class="dropdown-item active"> Home</button>
+                        <button onclick="load_tab('homepage')" class="dropdown-item active" style="font-size:2vw"> Home</button>
                         <div class="dropdown-container" style="display: none"></div>
 
-                        <button class="dropdown-item"> Fill</button>
+                        <button class="dropdown-item" style="font-size:2vw"> Fill</button>
                         <div class="dropdown-container">
-                                <li><a href="#" onclick="load_tab('fill_survey')">Surveys</a></li>
+                                <li><a href="#" onclick="load_tab('fill_survey')" style="font-size:2vw">Surveys</a></li>
                         </div>
 
-                        <button class="dropdown-item"> View</button>
+                        <button class="dropdown-item" style="font-size:2vw"> View</button>
                         <div class="dropdown-container">
-                                <li><a href="#" onclick="load_tab('view_records')">Records</a></li>
-                                <li><a href="#" onclick="load_tab('view_surveys')">Surveys</a></li>
+                                <li><a href="#" onclick="load_tab('view_records')" style="font-size:2vw">Records</a></li>
+                                <li><a href="#" onclick="load_tab('view_surveys')" style="font-size:2vw">Surveys</a></li>
                         </div>
 
-                        <button class="dropdown-item"> Create</button>
+                        <button class="dropdown-item" style="font-size:2vw"> Create</button>
                         <div class="dropdown-container">
-                                <li><a href="#" onclick="load_tab('create_question')">Questions</a></li>
-                                <li><a href="#" onclick="load_tab('create_survey')">Surveys</a></li>
+                                <li><a href="#" onclick="load_tab('create_question')" style="font-size:2vw">Questions</a></li>
+                                <li><a href="#" onclick="load_tab('create_survey')" style="font-size:2vw">Surveys</a></li>
                         </div>
 
-                        <button onclick="load_tab('admin_space')" class="dropdown-item"> Settings</button>
+                        <button onclick="load_tab('admin_space')" class="dropdown-item" style="font-size:2vw"> Settings</button>
                     </ul>
                 </div>
                 <!--SIDE NAVBAR-->
