Welcome User updated
Changes were made to pull first name from session data

--- a/views/index.html
+++ b/views/index.html
@@ -1,23 +1,24 @@
-﻿﻿<!doctype html>
+﻿﻿
+<!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css" >
+    <link rel="stylesheet" href="css/bootstrap.css">
 
     <title>Surv-YAY Homepage</title>
-  </head>
-  <body onload="load_tab('homepage')">
-      <!--HEADER-->
-      <nav class="navbar navbar-expand-lg navbar bg static-top">
-          <a class="navbar-brand" href="index" id="homepage">
-              <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left;">
-          </a>
-          <h2 style="text-align: right;">Welcome, User!</h2>
-          <button type="button" class="btn btn-primary" onclick=logout() style="
+</head>
+<body onload="load_tab('homepage')">
+    <!--HEADER-->
+    <nav class="navbar navbar-expand-lg navbar bg static-top">
+        <a class="navbar-brand" href="index" id="homepage">
+            <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left;">
+        </a>
+        <h2 style="text-align: right;" id="firstN"> </h2>
+        <button type ="button"  class="btn btn-primary" onclick=logout() style="
                     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                     padding: 14px 20px;
                     margin: 8px 0;
@@ -27,86 +28,88 @@
                     border-radius: 5px;
                     text-align: right;
                     font-size: 15pt;">Logout</button>
-      </nav>
+    </nav>
 
-      <div class="container-fluid">
-            <div class="row">
-                <!--SIDE NAVBAR-->
-                <div class="col-sm-2 col-md-1 dropdown" style="padding-right: 0; padding-left: 0">
-                    <ul class="dropdown-menu flex-column">
-                        <!--TODO: Add appropriate Home link-->
-                        <button onclick="load_tab('homepage')" class="dropdown-item active"> Home</button>
-                        <div class="dropdown-container" style="display: none"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <!--SIDE NAVBAR-->
+            <div class="col-sm-2 col-md-1 dropdown" style="padding-right: 0; padding-left: 0">
+                <ul class="dropdown-menu flex-column">
+                    <!--TODO: Add appropriate Home link-->
+                    <button onclick="load_tab('homepage')" class="dropdown-item active"> Home</button>
+                    <div class="dropdown-container" style="display: none"></div>
 
-                        <button class="dropdown-item"> Fill</button>
-                        <div class="dropdown-container">
-                                <li><a href="#" onclick="load_tab('fill_survey')">Surveys</a></li>
-                        </div>
+                    <button class="dropdown-item"> Fill</button>
+                    <div class="dropdown-container">
+                        <li><a href="#" onclick="load_tab('fill_survey')">Surveys</a></li>
+                    </div>
 
-                        <button class="dropdown-item"> View</button>
-                        <div class="dropdown-container">
-                                <li><a href="#" onclick="load_tab('view_records')">Records</a></li>
-                                <li><a href="#" onclick="load_tab('view_surveys')">Surveys</a></li>
-                        </div>
+                    <button class="dropdown-item"> View</button>
+                    <div class="dropdown-container">
+                        <li><a href="#" onclick="load_tab('view_records')">Records</a></li>
+                        <li><a href="#" onclick="load_tab('view_surveys')">Surveys</a></li>
+                    </div>
 
-                        <button class="dropdown-item"> Create</button>
-                        <div class="dropdown-container">
-                                <li><a href="#" onclick="load_tab('create_question')">Questions</a></li>
-                                <li><a href="#" onclick="load_tab('create_survey')">Surveys</a></li>
-                        </div>
+                    <button class="dropdown-item"> Create</button>
+                    <div class="dropdown-container">
+                        <li><a href="#" onclick="load_tab('create_question')">Questions</a></li>
+                        <li><a href="#" onclick="load_tab('create_survey')">Surveys</a></li>
+                    </div>
 
-                        <button onclick="load_tab('admin_space')" class="dropdown-item"> Settings</button>
-                    </ul>
-                </div>
-                <!--SIDE NAVBAR-->
-
-                <!--MAIN BODY-->
-                <div class="col-sm-4 col-md-10 mai" id="mainBody"></div>
-                <!--MAIN BODY-->
+                    <button onclick="load_tab('admin_space')" class="dropdown-item"> Settings</button>
+                </ul>
             </div>
-      </div>
-
-
-    
-  </body>
-
-  <!-- Footer Help | About | User Account-->
-  <footer class="page-footer font-small " style="padding-right: 5%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-    <div class="footer-copyright text-right py-3" >
-      <a href="#" onclick="load_tab('help')" style="color: black"> Help</a>
-      <a> | </a>
-      <a href="#" onclick="load_tab('about')" style="color: black"> About</a>
-      <a> | </a>
-      <a href="#" onclick="load_tab('contact')" style="color: black"> Contact Us</a>
+            <!--SIDE NAVBAR-->
+            <!--MAIN BODY-->
+            <div class="col-sm-4 col-md-10 mai" id="mainBody"></div>
+            <!--MAIN BODY-->
+        </div>
     </div>
-  </footer>
-  <!-- Footer -->
+
+
+
+</body>
+
+<!-- Footer Help | About | User Account-->
+<footer class="page-footer font-small " style="padding-right: 5%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+    <div class="footer-copyright text-right py-3">
+        <a href="#" onclick="load_tab('help')" style="color: black"> Help</a>
+        <a> | </a>
+        <a href="#" onclick="load_tab('about')" style="color: black"> About</a>
+        <a> | </a>
+        <a href="#" onclick="load_tab('contact')" style="color: black"> Contact Us</a>
+    </div>
+</footer>
+<!-- Footer -->
 </html>
 
 <script>
-        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-        var dropdown = document.getElementsByClassName("dropdown-item");
-        var i;
-    
-        for (i = 0; i < dropdown.length; i++) {
-            dropdown[i].addEventListener("click", function () {
-                this.classList.toggle("active");
-                var dropdownContent = this.nextElementSibling;
-                if (dropdownContent.style.display === "block") {
-                    dropdownContent.style.display = "none";
-                } else {
-                    dropdownContent.style.display = "block";
-                }
-            });
-        }
+    var gathered_first = sessionStorage.getItem("FirstName")
+    document.getElementById("firstN").innerHTML = 'Welcome, ' + gathered_first + '!'
 
-        function load_tab(tab) {
-            var dest = 'views/' + tab
-            console.log(dest);
-            document.getElementById("mainBody").innerHTML = '<object type="text/html" data=' + tab + ' width=100% height=100%></object>';
-        }
+    /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+    var dropdown = document.getElementsByClassName("dropdown-item");
+    var i;
 
-        function logout(){
-            window.location = '/';
-        }
+    for (i = 0; i < dropdown.length; i++) {
+        dropdown[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var dropdownContent = this.nextElementSibling;
+            if (dropdownContent.style.display === "block") {
+                dropdownContent.style.display = "none";
+            } else {
+                dropdownContent.style.display = "block";
+            }
+        });
+    }
+
+    function load_tab(tab) {
+        var dest = 'views/' + tab
+        console.log(dest);
+        document.getElementById("mainBody").innerHTML = '<object type="text/html" data=' + tab + ' width=100% height=100%></object>';
+    }
+
+    function logout() {
+        window.location = '/';
+    }
 </script>
