--- a/views/login.html
+++ b/views/login.html
@@ -119,6 +119,9 @@
                         sessionStorage.setItem("favoriteMovie", favoritemovie);
                         sessionStorage.setItem("UsersProject", ProdID);
                         sessionStorage.setItem("UserID", UserID);
+                        sessionStorage.setItem("FirstName", Fir_Name);
+
+
                         //console.log(favoritemovie)
 
                         real_pass = Password;
