--- a/views/user_space.html
+++ b/views/user_space.html
@@ -18,7 +18,7 @@
 <body id="user_space" style="background-color: #DFE4E8; width: 100%">
     <div class="container-fluid" id="primary">
         <h1>User Space</h1>
-        <h2>Update user:</h2>
+        <h2>Update User</h2>
         <label>Set New Password:</label>
         <input style="width:185px; display:inline;" class="form-control" placeholder="******" type="password" id="updateUserPassword">
         <br><br>
@@ -36,6 +36,7 @@
 </html>
 
 <script type="text/javascript">
+    var gathered_user = sessionStorage.getItem("UserID");
     var password = "";
 
     document.getElementById("submitPass").addEventListener("click", function () {
@@ -43,22 +44,23 @@
     }, false);
 
     function updateUser() {
-        updateUser = document.getElementById('updateUser').value;
         updatePassword = document.getElementById('updateUserPassword').value;
         confirmPassword = document.getElementById('confirmUserPassword').value;
 
         event.preventDefault();
 
         if (updatePassword == confirmPassword) {
+            
+            document.getElementById('wrong').style.display = "none";
             console.log("Match")
             if (updatePassword != '') {
             fetch('http://18.219.137.210:3000/api/user/user_pass/update', {
                 method: 'PUT',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
-                    UserID: updateUser,
+                    UserID: gathered_user,
                     Password: updatePassword,
-                    UserID: updateUser
+                    UserID: gathered_user
                 })
             }).then((res) => res.json())
                 .then((data) => { console.log(data); })
