--- a/views/create_survey.html
+++ b/views/create_survey.html
@@ -27,6 +27,7 @@
         <h2>Survey description:</h2>
         <textarea rows="4" cols="50" id="survD"></textarea><br><br>
         <button type="button" id="submit"> Submit > </button>
+        <button type="button" id="delete"> Delete > </button>
     </div>
 </body>
 
@@ -42,6 +43,10 @@
     document.getElementById("submit").addEventListener("click", function () {
         submitQuestions(document.getElementById("survTitle").value,
             document.getElementById("survD").value);
+    }, false);
+
+    document.getElementById("delete").addEventListener("click", function () {
+        deleteQuestions();
     }, false);
 
     function getQuestions() {
@@ -65,39 +70,35 @@
     function submitQuestions(title, des) {
         console.log(title);
         console.log(des);
-        var url = 'http://18.219.137.210:3000/api/questions';
-        $(document).ready(function () {
-            $.getJSON(url, function (data) {
-                $.each(data, function (key, value) {
-                    var checkId = JSON.parse(value.QuesID);
-                    $('input[name="checkbox"]:checked').each(function () {
-                        checked.push(checkId);
-                    })
+        if(confirm("Are you sure you want to submit?")){
+            // adding survey questions to array 
+            $('#questionTable input:checked').each(function() {
+                checked.push($(this).attr('id'));
+            });
+            console.log(checked);
+
+            // posting the survey creator, title, and description 
+            fetch('http://18.219.137.210:3000/api/surveys/add', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    SurvCreator: gathered_user,
+                    SurvTitle: title,
+                    SurvDescription: des
                 })
-            })
-        })
-
-        console.log(checked);
-
-        // posting the survey title and description 
-        fetch('http://18.219.137.210:3000/api/surveys/add', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                SurvCreator: gathered_user,
-                SurvTitle: title,
-                SurvDescription: des
-            })
-        }).then((res) => res.json())
-            .then((data) => postQ(data.insertId, checked))
-            .catch((err) => console.log(err))
+            }).then((res) => res.json())
+                .then((data) => postQ(data.insertId, checked))
+                .catch((err) => console.log(err))
+        }else{
+            alert("Submit canceled!");
+        }
     }
 
 
     function postQ(dat, check) {
-        var id = dat;
-        var des = check;
-        des.forEach(choice => {
+        var id = dat; // the survey ID
+        var des = check; // array of survey questions
+        des.forEach(choice => { 
             // posting the chosen questions to the new survey 
             fetch('http://18.219.137.210:3000/api/surveys/add_question', {
                 method: 'POST',
@@ -110,6 +111,33 @@
                 .then((data) => console.log(data))
                 .catch((err) => console.log(err))
         })
+        alert("A Survey has been added to the database!");
+    }
+
+    function deleteQuestions(){
+        var checkedD =[];
+
+        if(confirm("Are you sure you want to delete?")){
+            $('#questionTable input:checked').each(function() {
+                checkedD.push($(this).attr('id'));
+            });
+            console.log(checkedD);
+            checkedD.forEach(choice => {
+                // posting the chosen questions to the new survey 
+                fetch('http://18.219.137.210:3000/api/questions/delete', {
+                    method: 'DELETE',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        QuesID: choice
+                    })
+                }).then((res) => res.json())
+                    .then((data) => console.log(data))
+                    .catch((err) => console.log(err))
+                })
+                alert("You deleted questions.");
+        }else{
+            alert("You canceled the delete.");
+        }
     }
 
 </script>
