--- a/views/create_survey.html
+++ b/views/create_survey.html
@@ -57,7 +57,7 @@
                 $.each(data, function (key, value) {
                     var checkID = JSON.parse(value.QuesID);
                     question_data += '<tr>';
-                    question_data += '<td style=width:5%;text-align:center;vertical-align:middle><input name=checkbox type=checkbox id=tncheckbox' + checkID + '></input></td>';
+                    question_data += '<td style=width:5%;text-align:center;vertical-align:middle><input name=checkbox type=checkbox id=' + checkID + '></input></td>';
                     question_data += '<td style=width:11%;text-align:center>' + value.QuesID + '</td>';
                     question_data += '<td>' + value.Ques_text + '</td>';
                     question_data += '</tr>';
@@ -113,31 +113,44 @@
         })
         alert("A Survey has been added to the database!");
     }
-
+/**
     function deleteQuestions(){
         var checkedD =[];
-
-        if(confirm("Are you sure you want to delete?")){
-            $('#questionTable input:checked').each(function() {
-                checkedD.push($(this).attr('id'));
+        fetch('http://10.10.9.145:3000/api/users/project_roles/:ProdID')
+        .then((res_1) => { return res_1.json() })
+        .then((data_1) => {
+            let result = ``;
+            data_1.forEach((roler) => {
+                const {Role, UserID} = roler
+                if(gathered_user == UserID){
+                    result += `${Role} `;
+                }
+                //document.getElementById('displayspot').innerHTML = result;
             });
-            console.log(checkedD);
-            checkedD.forEach(choice => {
-                // posting the chosen questions to the new survey 
-                fetch('http://18.219.137.210:3000/api/questions/delete', {
-                    method: 'DELETE',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        QuesID: choice
+        })
+        if(result > 3){
+            if(confirm("Are you sure you want to delete?")){
+                $('#questionTable input:checked').each(function() {
+                checkedD.push($(this).attr('id'));
+                });
+                console.log(checkedD);
+                checkedD.forEach(choice => {
+                    // posting the chosen questions to the new survey 
+                    fetch('http://18.219.137.210:3000/api/questions/delete', {
+                        method: 'DELETE',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                            QuesID: choice
+                        })
+                    }).then((res) => res.json())
+                        .then((data) => console.log(data))
+                        .catch((err) => console.log(err))
                     })
-                }).then((res) => res.json())
-                    .then((data) => console.log(data))
-                    .catch((err) => console.log(err))
-                })
-                alert("You deleted questions.");
-        }else{
-            alert("You canceled the delete.");
+                    alert("You deleted questions.");
+            }else{
+                alert("You canceled the delete.");
+            }
         }
     }
-
+*/
 </script>
