create question edited

--- a/views/create_question.html
+++ b/views/create_question.html
@@ -30,9 +30,7 @@
                 <input type = "text" id = "d"><br><br>
             </div> 
             
-            <button type="button" id="submit">Submit ></button><br><br>
-            <textarea id = "displayspot" type = "textarea" rows="4" cols="50"></textarea><br><br>
-        </div>    
+            <button type="button" id="submit">Submit ></button><br><br>        </div>    
     </body>
 </html>
 
