--- a/views/create_question.html
+++ b/views/create_question.html
@@ -61,14 +61,18 @@ function postQuestion(gotText, gotTypeM, gotTypeT, gotTypeP, ai, bi, ci, di){
     let typeMu = gotTypeM; // multi choice question
     let typeTe = gotTypeT; // text box question
     let typeP = gotTypeP; // text area question
-    // posting the question text
-    fetch('http://18.219.137.210:3000/api/questions/add', {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({Ques_text:text})
-    }).then((res) => res.json())
-    .then((data) =>  addChoice(data.insertId, typeMu, typeTe, typeP))
-    .catch((err)=>console.log(err))
+    if(text == ""){
+        alert("Please enter a question!")
+    }else{
+        // posting the question text
+        fetch('http://18.219.137.210:3000/api/questions/add', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify({Ques_text:text})
+        }).then((res) => res.json())
+        .then((data) =>  addChoice(data.insertId, typeMu, typeTe, typeP))
+        .catch((err)=>console.log(err))
+    }
 }
 function addChoice(inID, mul, tex, par){
     id = inID; // quesID
@@ -93,19 +97,23 @@ function addChoice(inID, mul, tex, par){
         .catch((err)=>console.log(err)) 
         alert("A Question has been added to the database!");
     }else if(typeMu.checked){ // multiple choice 
-        allChoices.forEach(choice =>{
-            // posting the multi choice answers 
-            fetch('http://18.219.137.210:3000/api/questions/add_choice', {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({QuesID:id,
-                              Choi_text:choice,
-                              Choi_text_id:1})
-            }).then((res) => res.json())
-            .then((data) =>  console.log(data))
-            .catch((err)=>console.log(err))
-        })
-        alert("A Question has been added to the database with multiple choice answers!");
+        if(a==""){
+            alert("Please enter multiple choice answers");
+        }else{
+            allChoices.forEach(choice =>{
+                // posting the multi choice answers 
+                fetch('http://18.219.137.210:3000/api/questions/add_choice', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({QuesID:id,
+                                Choi_text:choice,
+                                Choi_text_id:1})
+                }).then((res) => res.json())
+                .then((data) =>  console.log(data))
+                .catch((err)=>console.log(err))
+            })
+            alert("A Question has been added to the database with multiple choice answers!");
+        }
     }else if(typeP.checked){
         // posting questions with paragraph responses
         fetch('http://18.219.137.210:3000/api/questions/add_choice', {
