--- a/views/about.html
+++ b/views/about.html
@@ -1,15 +1,83 @@
 ﻿<html lang="en">
 <head>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="about" style="background-color: #DFE4E8; width: 100%">
     <div class="container-fluid" id="primary">
-        <h1 id="page-header"> About</h1>
-        <h3> Please hold on while we look for this! About us!</h3>
+        <h1 id="page-header"> About Us</h1>
+        <p>Welcome to Surv-Yay! This is our About Us page.</p>
+        <br>
+        <h2>Our Team</h2>
+        <p>This is the information regarding the developers of the Surv-Yay site.</p>
     </div>
+
+    <div class="row text-center">
+        <div class="col-xl-2 col-sm-3 mb-2">
+            <!--Tori's Info-->
+            <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img src="https://media.licdn.com/dms/image/C4D03AQGpGRQnnXYI0g/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=fDxwvzI0h5IcIBiiWiJIR1twm3Yc_8Lrtr0fg_C_xYQ" alt="Victoria Cameron" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0"> Victoria Cameron </h5><span class="small text-uppercase text-muted"> Information Systems </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/victoria-cameron-912693135/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/victoria-cameron" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-xl-2 col-sm-3 mb-2">
+            <!--Hannah's Info-->
+            <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img src="https://media.licdn.com/dms/image/C4D03AQGXN3PZf6wNWw/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=bLrP8Yofd4eiH3vxYMECFoQuMEdPNIDr4bxPvJGt-pU" alt="Hannah Dougherty" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0"> Hannah Dougherty </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/hannah-dougherty-54018714b/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/handough" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-xl-2 col-sm-3 mb-2">
+            <!--Leslie's Info-->
+            <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img src="https://media.licdn.com/dms/image/C4D03AQEHMjSFOaz2eQ/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=QpzkoTg5ZbY_AZIkiH419suNX6ttkeIQzZgwcJU00fU" alt="Leslie Flores" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0"> Leslie Flores </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/leslie-j-flores/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/Leslie-Flores" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-xl-2 col-sm-3 mb-2">
+            <!--Molly's Info-->
+            <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img src="https://media.licdn.com/dms/image/C4D03AQE1BfGiqWumPQ/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=4ijipIpEYkfh_got2mr9D10G8tgu7nHOtts7s_1JzZ4" alt="Molly Smith" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0"> Molly Smith </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/molly-smith-3b9450151/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/mollysmith4" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-xl-2 col-sm-3 mb-2">
+            <!--Mike's Info-->
+            <div class="bg-white rounded shadow-sm py-5 px-4">
+                <img src="https://media.licdn.com/dms/image/C4E03AQEevCzG5achxQ/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=zybuhj3brP4B_dNXoGn2lUcmtuEq2Kg4x_lyD4SjnoY" alt="Mike Macaluso" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0"> Mike Macaluso </h5><span class="small text-uppercase text-muted"> Information Technology </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/mike-macaluso-728842176/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
